--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.8.1
 Django==5.0.4
 django-allauth==0.61.1
+django-countries==7.2.1
 django-crispy-forms==1.14.0
 oauthlib==3.2.2
 pillow==10.3.0
@@ -8,3 +9,4 @@ PyJWT==2.8.0
 python3-openid==3.2.0
 requests-oauthlib==2.0.0
 sqlparse==0.5.0
+stripe==9.4.0
